--- a/index.html
+++ b/index.html
@@ -1,22 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,
-	initial-scale=1">
-	<title>Mems</title>
-    <link rel="stylesheet" type="text/css" href="style.css" >
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="script.js" defer></script>
-    </head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>R😂B😂J😂KE</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
-	<header>
+    <header>
         <img class="header__img" src="images/logo.png" alt="logo">
         <h1 class="header__title">R😂B😂J😂KE</h1>
     </header>
     <main>
-    	
+        <h2 class="main__title">Like, dislike or submit a joke)</h2>
+        <div class="jokes_container" id="jokes_container">
+            <div class="joke">
+                <div class="joke__content">
+                    President Lincoln was approached by a woman after a political speech… If you were my husband I would poison your tea. Lincoln replied...if you are my wife I'll gladly drink it.
+                </div>
+                <div class="joke__footer">
+                    <div class="joke__likes">
+                        <span>17</span>
+                        <button class="joke__btn">
+                            <span class="material-symbols-outlined">
+                                thumb_up
+                            </span>
+                        </button>
+                    </div>
+                    <div class="joke__likes">
+                        <span>0</span>
+                        <button class="joke__btn">
+                            <span class="material-symbols-outlined">
+                                thumb_down
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="joke">
+                <div class="joke__content">
+                    Батьки дітям:
+                    – 4-й клас: Ти уроки зробив?
+                    – 9-й клас: Ти портфель зібрав?
+                    – 11-й клас: Ти в школу йдеш?
+                </div>
+                <div class="joke__footer">
+                    <div class="joke__likes">
+                        <span>17</span>
+                        <button class="joke__btn">
+                            <span class="material-symbols-outlined">
+                                thumb_up
+                            </span>
+                        </button>
+                    </div>
+                    <div class="joke__likes">
+                        <span>0</span>
+                        <button class="joke__btn">
+                            <span class="material-symbols-outlined">
+                                thumb_down
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        <form class="joke_form" id="joke_form">
+            <input type="text" name="joke" class="joke_form__input">
+            <button class="joke_form__btn">Submit</button> 
+        </form>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
